double_sided wrong in Collada Export #26474

Closed
opened 2011-03-12 16:49:47 +01:00 by Juan Linietsky · 7 comments
Member

%%%Blender collada export is using the wrong extensions for double_sided.
It's appending:

``` 1 ```

and

``` 1 ```

to the MATERIAL section. This is becuase 3DS Max sets double sidedness in the material.
Blender sets double sidedness in the GEOMETRY, NOT in the material. This is the same as MAYA, so the correct behavior
is to use the MAYA extension instead, which is equally supported too:

When exported from Blender, the following tag must be appeded to the tag:

....

      <technique profile="MAYA">
            <double_sided>1</double_sided>
      </technique>

and the existing tags in Material should be removed, because they are confusing to importers.
%%%

%%%Blender collada export is using the wrong extensions for double_sided. It's appending: <extra> ``` <technique profile="GOOGLEEARTH"> <show_double_sided>1</show_double_sided> </technique> ``` </extra> and <extra> ``` <technique profile="MAX3D"> <double_sided>1</double_sided> </technique> ``` </extra> to the MATERIAL section. This is becuase 3DS Max sets double sidedness in the material. Blender sets double sidedness in the GEOMETRY, NOT in the material. This is the same as MAYA, so the correct behavior is to use the MAYA extension instead, which is equally supported too: When exported from Blender, the following tag must be appeded to the <geometry> tag: <geometry> .... <extra> ``` <technique profile="MAYA"> <double_sided>1</double_sided> </technique> ``` </extra> </geometry> and the existing tags in Material should be removed, because they are confusing to importers. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%assigning to myself for further investigation.%%%

%%%assigning to myself for further investigation.%%%
Member

%%%Wouldn't it make sense to have the tag then in both material and geometry? Of course, if 3DS Max also reads correctly with tag set in geometry, it's ok to have it only there.%%%

%%%Wouldn't it make sense to have the tag then in both material and geometry? Of course, if 3DS Max also reads correctly with tag set in geometry, it's ok to have it only there.%%%
Author
Member

%%%My fear is that having it in both places may confuse other importers. Since there is no exporter at the moment that exports this in all places, existing ones most definitely settle with wathever they find first (or last). Maya is a widely used app (specially on the game industry, that uses collada), so just mimicking its behavior should be, i think, the safest way to proceed.%%%

%%%My fear is that having it in both places may confuse other importers. Since there is no exporter at the moment that exports this in all places, existing ones most definitely settle with wathever they find first (or last). Maya is a widely used app (specially on the game industry, that uses collada), so just mimicking its behavior should be, i think, the safest way to proceed.%%%
Member

%%%This link: http://docs.garagegames.com/torque-3d/official/content/documentation/Artist%20Guide/Importing%20Assets/ColladaLoader.html nicely explains the different profiles that can be used to mark this. Importers generally just ignore other profiles, so I don't think that's a problem. What you see is most likely just that the profile your tool relies on isn't there.

I'll add the tag for Maya too, right now just hard-coded, but these things should eventually go behind an option on the exporter. But that's for todo list.%%%

%%%This link: http://docs.garagegames.com/torque-3d/official/content/documentation/Artist%20Guide/Importing%20Assets/ColladaLoader.html nicely explains the different profiles that can be used to mark this. Importers generally just ignore other profiles, so I don't think that's a problem. What you see is most likely just that the profile your tool relies on isn't there. I'll add the tag for Maya too, right now just hard-coded, but these things should eventually go behind an option on the exporter. But that's for todo list.%%%
Member

%%%Added the Maya profile to . Committed in r35713.

Thanks for reporting.%%%

%%%Added the Maya profile to <geometry>. Committed in r35713. Thanks for reporting.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#26474
No description provided.